--- a/source/catalog.html
+++ b/source/catalog.html
@@ -105,7 +105,7 @@
             </picture>
           </a>
           <a class="main-card__title-link" href="">
-            <h3 class="main-card__title"></h3>
+            <h3 class="main-card__title">Cat Energy PRO 500 г</h3>
           </a>
           <dl class="main-card__dl">
             <div class="main-card__dt-dd-container">
@@ -231,7 +231,7 @@
           </dl>
           <a class="main-card__button button button--primary" href="">Заказать</a>
         </li>
-        <li class="main-card main-product-card--special">
+        <li class="main-card main-card--special">
           <a class="main-card__picture-link" href="">
             <picture class="main-card__picture">
               <source media="(min-width: 768px)" width="60" height="60" srcset="./images/main-cards/plus-icon.svg">
