--- a/source/catalog.html
+++ b/source/catalog.html
@@ -40,7 +40,7 @@
     </div>
   </header>
 
-  <main class="page-main">
+  <main class="main">
     <h1 class="page__title container">Каталог продукции</h1>
     <section class="main-products">
       <h2 class="visually-hidden">Основные товары</h2>
@@ -304,7 +304,7 @@
 
   </main>
 
-  <footer class="page-footer">
+  <footer class="footer">
     <section class="contacts wrapper wrapper--contacts">
       <h2 class="visually-hidden">Наши контакты</h2>
       <div class="container">
