--- a/source/index.html
+++ b/source/index.html
@@ -42,7 +42,7 @@
     </div>
   </header>
 
-  <main class="page-main">
+  <main class="main">
     <h1 class="visually-hidden">Главная страница</h1>
 
     <section class="intro wrapper wrapper--intro">
@@ -133,7 +133,7 @@
 
   </main>
 
-  <footer class=" page-footer">
+  <footer class="footer">
     <section class="contacts wrapper wrapper--contacts">
       <h2 class="visually-hidden">Наши контакты</h2>
       <div class="container">
